office-kubernetes/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    shared-web-gateway-access: "true"
