office-kubernetes/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: traefik
  # tls:
  #   - hosts:
  #       - argocd.k8s.local-k8s.tech
  #     secretName: grafana-ingress-cert
  rules:
    - host: "argocd.k8s.local-k8s.tech"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
