office-kubernetes/argocd/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
spec:
  parentRefs:
  - name: web
    namespace: argocd
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
